--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17180421">The Supreme Court Is Stubbornly Analog By Design</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181334">A comparison of adaptive radix trees and hash tables [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://fivethirtyeight.com/features/the-supreme-court-is-stubbornly-analog-by-design/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=sprucely">sprucely</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 16:08:38 &nbsp;•&nbsp;
-                                    28 comments &nbsp;•&nbsp;
-                                    55.0 points
+                                    <a class="node" href="https://bigdata.uni-saarland.de/publications/ARCD15.pdf">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 17:43:02 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    52.0 points
                                 </span>
                             </td>
                         </tr>
@@ -186,15 +186,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181334">A comparison of adaptive radix trees and hash tables [pdf]</a>
+                                    <a href="https://news.ycombinator.com/item?id=17185407">Ocean waves play greater role in trapping CO2 than previously understood</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://bigdata.uni-saarland.de/publications/ARCD15.pdf">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 17:43:02 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    52.0 points
+                                    <a class="node" href="https://phys.org/news/2018-05-reveals-ocean-greater-role-carbon.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=startupflix">startupflix</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 05:55:17 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    51.0 points
                                 </span>
                             </td>
                         </tr>
@@ -255,26 +255,6 @@
                                     2018-05-29 19:49:45 &nbsp;•&nbsp;
                                     11 comments &nbsp;•&nbsp;
                                     49.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17185407">Ocean waves play greater role in trapping CO2 than previously understood</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://phys.org/news/2018-05-reveals-ocean-greater-role-carbon.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=startupflix">startupflix</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 05:55:17 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
-                                    48.0 points
                                 </span>
                             </td>
                         </tr>
@@ -466,6 +446,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17186591">How Scrum disempowers developers (and destroyed Agile)</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.lambdacambridge.com/blog/how-scrum-disempowers-developers-and-destroys-agile">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Robin_Message">Robin_Message</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 10:53:13 &nbsp;•&nbsp;
+                                    8 comments &nbsp;•&nbsp;
+                                    32.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17184855">Japanese Whalers Killed 122 Pregnant Whales and 114 Babies Last Summer</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -494,7 +494,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=pedro84">pedro84</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 05:24:20 &nbsp;•&nbsp;
                                     1 comments &nbsp;•&nbsp;
-                                    27.0 points
+                                    29.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 11:40:03.909295</strong>
+            <strong>Last update at 2018-05-30 11:50:03.202296</strong>
         </div>
     </div>
 </div>
