--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186457">Diamonds Suck</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175350">PS4-5.05-Kernel-Exploit: A fully implemented kernel exploit for the PS4</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://diamondssuck.com/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 10:14:20 &nbsp;•&nbsp;
-                                    73 comments &nbsp;•&nbsp;
-                                    172.0 points
+                                    <a class="node" href="https://github.com/Cryptogenic/PS4-5.05-Kernel-Exploit">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:06:24 &nbsp;•&nbsp;
+                                    48 comments &nbsp;•&nbsp;
+                                    174.0 points
                                 </span>
                             </td>
                         </tr>
@@ -206,6 +206,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17177955">Tcpdump Examples</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://hackertarget.com/tcpdump-examples">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 10:49:10 &nbsp;•&nbsp;
+                                    20 comments &nbsp;•&nbsp;
+                                    171.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17175421">Invisible asymptotes</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -226,26 +246,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177955">Tcpdump Examples</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://hackertarget.com/tcpdump-examples">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 10:49:10 &nbsp;•&nbsp;
-                                    19 comments &nbsp;•&nbsp;
-                                    169.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17183784">Learn cryptographic engineering by example</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -254,7 +254,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 23:59:50 &nbsp;•&nbsp;
                                     7 comments &nbsp;•&nbsp;
-                                    164.0 points
+                                    167.0 points
                                 </span>
                             </td>
                         </tr>
@@ -474,7 +474,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=cpitman">cpitman</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 21:36:30 &nbsp;•&nbsp;
                                     44 comments &nbsp;•&nbsp;
-                                    147.0 points
+                                    149.0 points
                                 </span>
                             </td>
                         </tr>
@@ -513,7 +513,7 @@
                                     <a class="node" href="https://research.swtch.com/vgo-accepted">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 21:37:21 &nbsp;•&nbsp;
-                                    107 comments &nbsp;•&nbsp;
+                                    108 comments &nbsp;•&nbsp;
                                     145.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 11:40:03.909295</strong>
+            <strong>Last update at 2018-05-30 11:50:03.202296</strong>
         </div>
     </div>
 </div>
