--- a/jobs/page1.html
+++ b/jobs/page1.html
@@ -144,6 +144,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17156929">Mino Games Is Hiring Programmers in Montreal</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://mino-games.workable.com/jobs/415887">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=joshbuckley">joshbuckley</a></strong> &nbsp;•&nbsp;
+                                    2018-05-25 19:08:58 &nbsp;•&nbsp;
+                                    None comments &nbsp;•&nbsp;
+                                    1.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17154609">GoCardless Is Hiring Engineers/PMs/Data Scientists/Program Managers (London)</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -379,7 +399,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 11:50:03.202296</strong>
+            <strong>Last update at 2018-05-30 12:00:03.588234</strong>
         </div>
     </div>
 </div>
