--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17162971">The DisplayPort Pin 20 Problem</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://monitorinsider.com/displayport/dp_pin20_controversy.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=PascLeRasc">PascLeRasc</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 16:49:54 &nbsp;•&nbsp;
+                                    66 comments &nbsp;•&nbsp;
+                                    218.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17178365">WhoisGuard Privacy Protection is now free</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -286,14 +306,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17143200">GDPR Hall of Shame</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181879">Introducing Kepler.gl, an Open-Source Geospatial Toolbox</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://gdprhallofshame.com/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=K0nserv">K0nserv</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 12:15:40 &nbsp;•&nbsp;
-                                    183 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://ubere.ng/2H1HjFH">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mvorwerck">mvorwerck</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 18:42:23 &nbsp;•&nbsp;
+                                    15 comments &nbsp;•&nbsp;
                                     207.0 points
                                 </span>
                             </td>
@@ -306,15 +326,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181879">Introducing Kepler.gl, an Open-Source Geospatial Toolbox</a>
+                                    <a href="https://news.ycombinator.com/item?id=17143200">GDPR Hall of Shame</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://ubere.ng/2H1HjFH">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=mvorwerck">mvorwerck</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 18:42:23 &nbsp;•&nbsp;
-                                    15 comments &nbsp;•&nbsp;
-                                    206.0 points
+                                    <a class="node" href="http://gdprhallofshame.com/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=K0nserv">K0nserv</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 12:15:40 &nbsp;•&nbsp;
+                                    183 comments &nbsp;•&nbsp;
+                                    207.0 points
                                 </span>
                             </td>
                         </tr>
@@ -375,26 +395,6 @@
                                     2018-05-24 14:22:54 &nbsp;•&nbsp;
                                     68 comments &nbsp;•&nbsp;
                                     202.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186457">Diamonds Suck</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://diamondssuck.com/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 10:14:20 &nbsp;•&nbsp;
-                                    88 comments &nbsp;•&nbsp;
-                                    198.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 11:50:03.202296</strong>
+            <strong>Last update at 2018-05-30 12:00:03.588234</strong>
         </div>
     </div>
 </div>
