--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -486,14 +486,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177817">So Your Startup Received the Nightmare GDPR Letter</a>
+                                    <a href="https://news.ycombinator.com/item?id=17186457">Diamonds Suck (2006)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://jacquesmattheij.com/so-your-start-up-receive-the-nightmare-gdpr-letter">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=janvdberg">janvdberg</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 10:06:53 &nbsp;•&nbsp;
-                                    481 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://diamondssuck.com/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 10:14:20 &nbsp;•&nbsp;
+                                    115 comments &nbsp;•&nbsp;
                                     266.0 points
                                 </span>
                             </td>
@@ -506,15 +506,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186457">Diamonds Suck</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177817">So Your Startup Received the Nightmare GDPR Letter</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://diamondssuck.com/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 10:14:20 &nbsp;•&nbsp;
-                                    109 comments &nbsp;•&nbsp;
-                                    263.0 points
+                                    <a class="node" href="https://jacquesmattheij.com/so-your-start-up-receive-the-nightmare-gdpr-letter">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=janvdberg">janvdberg</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 10:06:53 &nbsp;•&nbsp;
+                                    481 comments &nbsp;•&nbsp;
+                                    266.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 12:20:03.709526</strong>
+            <strong>Last update at 2018-05-30 12:30:03.120801</strong>
         </div>
     </div>
 </div>
