--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183658">The Indoor Generation – How life indoor effects us</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.velux.com/indoorgeneration">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=vinnyglennon">vinnyglennon</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 23:32:04 &nbsp;•&nbsp;
-                                    None comments &nbsp;•&nbsp;
-                                    13.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17182871">Micron stock hits 18-year high</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -446,6 +426,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17182357">Some Were Meant for C [pdf]</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.cl.cam.ac.uk/%7Esrk31/research/papers/kell17some-preprint.pdf">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=angersock">angersock</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 19:46:03 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    8.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17181860">Operator of the world's largest Internet node accuses BND of breaking law</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 13:40:03.618050</strong>
+            <strong>Last update at 2018-05-30 13:50:03.171538</strong>
         </div>
     </div>
 </div>
